package protoclaim;

	message ProtoListClaim {
	    repeated ProtoClaim Claims = 1;

	    message ProtoClaim {

			optional double GLB_OE_ID = 1;
			optional double CLM_RK = 2;
			optional string CLM_BUS_ID = 3;
			optional int64 ABT_DT_ZERO = 4;
			optional string CLM_STTS_CD = 5;
			optional string CLM_TYP_CD = 6;
			optional string CLM_CVRG_TYP = 7;
			optional string CLM_REASON_CD = 8;
			optional string CLM_DMG_DTL_CD = 9;
			optional double CLM_INDMNTY_AMT = 10;
			optional double CLM_RSRV_AMT = 11;
			optional double CLM_INITL_RSRV_AMT = 12;
			optional double DIFF_INTL_RSRV_PYMNT = 13;
			optional double CLM_FEE_AMT = 14;
			optional double TOT_CLM_AMT = 15;
			optional int64 INCDNT_DTTM = 16;
			optional double INCDNT_HOUR_OF_DAY = 17;
			optional double INCDNT_DAY_OF_WEEK = 18;
			optional int64 CLM_RGSTR_DTTM = 19;
			optional double DAYS_INCDNT_RGSTR = 20;
			optional int64 CLM_LAST_CLSD_DTTM = 21;
			optional int64 CLM_LAST_STTLM_DTTM = 22;
			optional double CLM_LGL_FLG = 23;
			optional string CLM_NOTIF_CHNL_CD = 24;
			optional string CLM_NOTIF_SRC_CD = 25;
			optional int64 CLM_NOTIF_TO_CLM_HNDL_DTTM = 26;
			optional double DAYS_NOTIF_CHNL_HNDL = 27;
			optional double CLM_RCVR_PAID_AMT = 28;
			optional double CLM_RSRV_STTLM_TRTY_AMT = 29;
			optional string INCDNT_DESC = 30;
			optional string INCDNT_LOC_DESC = 31;
			optional string INCDNT_LOC_GPS_CRDNT = 32;
			optional double INCDNT_MULTI_VEH_INCDNT_FLG = 33;
			optional double INCDNT_OTH_OBJ_FLG = 34;
			optional double INCDNT_PLCE_AT_SCENE_FLG = 35;
			optional double INCDNT_TOTAL_VEH_NO = 36;
			optional string INCDNT_CNTRY_CD = 37;
			optional double INCDNT_ABROAD_FLG = 38;
			optional string INCDNT_ADDR_LN_1 = 39;
			optional string INCDNT_CITY_NM = 40;
			optional string INCDNT_POSTAL_CD = 41;
			optional string INCDNT_DISTRICT_NM = 42;
			optional string CNTRCT_BUS_ID = 43;
			optional int64 CNTRCT_ISSUE_DTTM = 44;
			optional double DAYS_INCDNT_CNTRCT_ISSUE = 45;
			optional double DAYS_RGSTR_CNTRCT_ISSUE = 46;
			optional int64 CNTRCT_NEXT_RNWL_DTTM = 47;
			optional int64 CNTRCT_EXPRY_DTTM = 48;
			optional double DAYS_INCDNT_CNTRCT_EXPRY = 49;
			optional string PYMT_METHOD_CD = 50;
			optional string PYMT_MODE_CD = 51;
			optional double GWP_ANN_AMT = 52;
			optional double TSI_AMT = 53;
			optional double RATIO_CLM_AMT_TSI_AMT = 54;
			optional string PLCY_BUS_ID = 55;
			optional string PLCY_CNTRCT_CTGRY_CD = 56;
			optional string PLCY_CNTRCT_STTS_CD = 57;
			optional string PLCY_CNTRCT_TYP_CD = 58;
			optional string PLCY_PRM_ACCT_STTS_CD = 59;
			optional double PLCY_MNTH_PYMT_DUE_DAY_NO = 60;
			optional double PLCY_PRM_CVR_FLG = 61;
			optional int64 PLCY_PRM_CVR_FLG_UPDT_DT = 62;
			optional int64 PLCY_PRM_PAID_UNTIL_DT = 63;
			optional int64 PLCY_ISSUE_DTTM = 64;
			optional double DAYS_INCDNT_PLCY_ISSUE = 65;
			optional double DAYS_RGSTR_PLCY_ISSUE = 66;
			optional int64 PLCY_NEXT_RNWL_DTTM = 67;
			optional int64 PLCY_EXPRY_DTTM = 68;
			optional double DAYS_INCDNT_PLCY_EXPRY = 69;
			optional double CLM_PLCY_HLD_RSPN_PCT = 70;
			optional string FRAUD_FLG = 71;
			optional double INVSTGT_FLG = 72;
			optional int64 INVSTGT_STRT_DT = 73;
			optional int64 INVSTGT_END_DT = 74;
			optional double BI_FLG = 75;
			optional double OBJ_TTL_LOSS_FLG = 76;
			optional string CLM_OBJ_ROLE_CD = 77;
			optional string OBJ_TYP_CD = 78;
			optional string VEH_TYP_CD = 79;
			optional string VEH_USE_TYP_CD = 80;
			optional string OBJ_BUS_ID = 81;
			optional string VEH_VIN = 82;
			optional string VEH_MNFCTR_DT = 83;
			optional double VEH_AGE_YRS = 84;
			optional string VEH_COLOR_TXT = 85;
			optional string VEH_MNFCTR_NM = 86;
			optional string VEH_MODEL_TXT = 87;
			optional string VEH_MODEL_YR_NO = 88;
			optional double VEH_PRCH_AMT = 89;
			optional double VEH_LEASED_FLG = 90;
			optional string VEH_LCNS_PLATE_NO_TXT = 91;
			optional int64 VEH_PRCH_DT = 92;
			optional double RATIO_CLM_AMT_VEH_PRCH_AMT = 93;
			optional double TP_VEH_AGE_YRS = 94;
			optional double PLCE_RPRT_FLG = 95;
			optional string PRTY_TYP_CD = 96;
			optional string LE_BUS_TYP_CD = 97;
			optional string PE_GENDER_TYP_CD = 98;
			optional string PE_MRTL_STTS_CD = 99;
			optional string PE_OCC_TYP_CD = 100;
			optional string PRTY_TAX_NO_TXT = 101;
			optional double PRTY_WATCH_LIST_FLG = 102;
			optional string PLCY_HLD_NM = 103;
			optional int64 PE_BIRTH_DT = 104;
			optional double PLCY_HLD_AGE = 105;
			optional string PRTY_CNTRY_CD = 106;
			optional string PRTY_ADDR_LN_1 = 107;
			optional string PRTY_CITY_NM = 108;
			optional string PRTY_POSTAL_CD = 109;
			optional string PRTY_DISTRICT_NM = 110;
			optional double BR002_I001 = 111;
			optional double BR002_I002 = 112;
			optional double BR002_I003 = 113;
			optional double BR002_I004 = 114;
			optional double BR002_I005 = 115;
			optional double BR002_I006 = 116;
			optional double BR002_I007 = 117;
			optional double BR002_I008 = 118;
			optional double BR002_I009 = 119;
			optional double BR002_I010 = 120;
			optional double BR002_I011 = 121;
			optional double BR002_I012 = 122;
			optional double BR002_I013 = 123;
			optional double BR002_I014 = 124;
			optional double BR002_I015 = 125;
			optional double BR002_I016 = 126;
			optional double BR002_I017 = 127;
			optional double BR002_I018 = 128;
			optional double BR002_I019 = 129;
			optional double BR002_I020 = 130;
			optional double BR002_I021 = 131;
			optional double BR002_I022 = 132;
			optional double BR002_I023 = 133;
			optional double BR002_I024 = 134;
			optional double BR002_I025 = 135;
			optional double BR002_I026 = 136;
			optional double BR002_I027 = 137;
			optional double BR002_I028 = 138;
			optional double BR002_I029 = 139;
			optional double BR002_I030 = 140;
			optional double BR003_I001 = 141;
			optional double BR003_I002 = 142;
			optional double BR003_I003 = 143;
			optional double BR003_I004 = 144;
			optional double BR003_I005 = 145;
			optional double BR003_I006 = 146;
			optional double BR003_I007 = 147;
			optional double BR003_I008 = 148;
			optional double BR003_I009 = 149;
			optional double BR003_I010 = 150;
			optional double BR003_I011 = 151;
			optional double BR003_I012 = 152;
			optional double BR003_I013 = 153;
			optional double BR003_I014 = 154;
			optional double BR003_I015 = 155;
			optional double BR003_I016 = 156;
			optional double BR003_I017 = 157;
			optional double BR003_I018 = 158;
			optional double BR003_I019 = 159;
			optional double BR003_I020 = 160;
			optional double BR003_I021 = 161;
			optional double BR003_I022 = 162;
			optional double BR003_I023 = 163;
			optional double BR003_I024 = 164;
			optional double BR003_I025 = 165;
			optional double BR003_I026 = 166;
			optional double BR003_I027 = 167;
			optional double BR003_I028 = 168;
			optional double BR003_I029 = 169;
			optional double BR003_I030 = 170;
			optional double BR003_I031 = 171;
			optional double BR003_I032 = 172;
			optional double BR003_I033 = 173;
			optional double BR003_I034 = 174;
			optional double BR003_I035 = 175;
			optional double BR006_I001 = 176;
			optional double BR006_I002 = 177;
			optional double BR006_I003 = 178;
			optional double BR006_I004 = 179;
			optional double BR006_I005 = 180;
			optional double BR006_I006 = 181;
			optional double BR006_I007 = 182;
			optional double BR012_I001 = 183;
			optional double BR012_I002 = 184;
			optional double BR012_I003 = 185;
			optional double BR012_I004 = 186;
			optional double BR012_I005 = 187;
			optional double BR031_I001 = 188;
			optional double BR031_I002 = 189;
			optional double BR031_I003 = 190;
			optional double BR031_I004 = 191;
			optional double BR031_I005 = 192;
			optional double BR031_I006 = 193;
			optional double BR031_I007 = 194;
			optional double BR038_I001 = 195;
			optional double BR038_I002 = 196;
			optional double BR038_I003 = 197;
			optional double BR038_I004 = 198;
			optional double BR038_I005 = 199;
			optional double BR038_I006 = 200;
			optional double BR055_I001 = 201;
			optional double BR055_I002 = 202;
			optional double BR055_I003 = 203;
			optional double BR055_I004 = 204;
			optional double BR060_I001 = 205;
			optional double BR060_I002 = 206;
			optional double BR060_I003 = 207;
			optional double BR060_I004 = 208;
			optional double BR060_I005 = 209;
			optional double BR060_I006 = 210;
			optional double BR063_I001 = 211;
			optional double BR063_I002 = 212;
			optional double BR063_I003 = 213;
			optional double BR063_I004 = 214;
			optional double BR063_I005 = 215;
			optional double BR076_I001 = 216;
			optional double BR095_I001 = 217;
			optional double BR095_I002 = 218;
			optional double BR095_I003 = 219;
			optional double BR095_I004 = 220;
			optional double BR095_I005 = 221;
			optional double BR096_I001 = 222;
			optional double BR096_I002 = 223;
			optional double BR096_I003 = 224;
			optional double BR096_I004 = 225;
			optional double BR096_I005 = 226;
			optional double BR102_I001 = 227;
			optional double BR103_I001 = 228;
			optional double BR103_I002 = 229;
			optional double BR108_I001 = 230;
			optional double BR108_I002 = 231;
			optional double BR108_I003 = 232;
			optional double BR109_I001 = 233;
			optional double BR109_I002 = 234;
			optional double BR109_I003 = 235;
			optional double BR109_I004 = 236;
			optional double BR109_I005 = 237;
			optional double BR109_I006 = 238;
			optional double BR109_I007 = 239;
			optional double BR109_I008 = 240;
			optional double BR109_I009 = 241;
			optional double BR109_I010 = 242;
			optional double BR110_I001 = 243;
			optional double BR111_I001 = 244;
			optional double BR112_I001 = 245;
			optional double BR113_I001 = 246;
			optional double BR114_I001 = 247;
			optional double BR114_I002 = 248;
			optional double BR114_I003 = 249;
			optional double BR114_I004 = 250;
			optional double BR115_I001 = 251;
			optional double BR117_I001 = 252;
			optional double BR118_I001 = 253;
			optional double BR119_I001 = 254;
			optional double BR121_I001 = 255;
			optional double BR122_I001 = 256;
			optional double BR123_I001 = 257;
			optional double BR125_I001 = 258;
			optional double NEW_INVSTGT_FLG = 259;
			optional int64 LOAD_DATE = 260;
		}
	}
